// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`payments/read-plans/get/mock GetPlan when plan exists gets a plan 1`] = `
Object {
  "currency": "USD",
  "interval": "month",
  "name": "Monthly subscription to Superface milk delivery",
  "price": 25,
  "productId": "PROD-1192810198",
  "state": "active",
}
`;

exports[`payments/read-plans/list/mock ListPlans when all inputs are correct lists all plans 1`] = `
Object {
  "plans": Array [
    Object {
      "currency": "USD",
      "interval": "month",
      "name": "Monthly subscription to Superface milk delivery",
      "planId": "PLAN-89101829211",
      "price": 25,
    },
    Object {
      "currency": "USD",
      "interval": "day",
      "name": "Daily subscription to Superface pizza delivery",
      "planId": "PLAN-89101829212",
      "price": 5,
    },
  ],
}
`;
